--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="submit">add a todo</string>
     <string name="tips_input_title">input title</string>
     <string name="tips_remind_by_time">remind me by time</string>
-    <string name="tips_remind_by_location">remind me by location</string>
+    <string name="tips_remind_by_location">remind me by location (within 500 meters)</string>
 </resources>
